stages/stage2/k8s/apps/identity/identity-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity
  namespace: apollo-airlines-apps
spec:
  replicas: 2
  selector:
    matchLabels:
      app: identity
  template:
    metadata:
      labels:
        app: identity
    spec:
      serviceAccountName: apollo11-apps
      containers:
        - name: identity
          image: apollo11/identity:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
