stages/stage2/k8s/apps/identity/identity-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: identity
  namespace: apollo-airlines-apps
spec:
  selector:
    app: identity
  ports:
    - port: 8080
      targetPort: 8080
